improved not found page

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+
+<div class="container center">
+  <br>
+  <p>404 Error :(</p>
+  <br>
+  <h2 class="center" >Page not found </h2>
+</div>
