--- a/src/styles.css
+++ b/src/styles.css
@@ -109,3 +109,31 @@ mat-sidenav {
 .mat-sidenav-content .mat-list-item {
   height: auto !important;
 }
+
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Container from bootstrap */
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
