--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <mat-icon>menu</mat-icon>
     </button>
 
-    <a class="navbar-brand" matTooltip="Home">
+    <a class="navbar-brand" matTooltip="Home" href="/">
       <h1>Seneca Music</h1>
     </a>
 
