--- a/src/app/new-releases/new-releases.component.html
+++ b/src/app/new-releases/new-releases.component.html
@@ -4,22 +4,25 @@
     <div fxLayout="row wrap" fxLayout.xs="column">
       <!-- Single "Responsive" Card-->
       <div fxFlex [style.margin]="'20px'" *ngFor="let album of releases">
-        <mat-card [style.min-width]="'200px'">
+        <mat-card [style.min-width]="'200px'" [style.padding-bottom]="'5px'">
           <mat-card-header [style.min-height]="'80px'">
-            <mat-card-title>{{ album.artists[0].name }}</mat-card-title>
+            <mat-card-title style="font-size: 1.35em" class="text-wrapper">{{
+              cropTitle(album.name, 45)
+            }}</mat-card-title>
             <mat-card-subtitle>New Release</mat-card-subtitle>
           </mat-card-header>
-          <a href="album"><img
-            mat-card-image
-            class="album-cover"
-            src="{{ album.images[1].url }}"
-            alt="album art"
+          <a href="album"
+            ><img
+              mat-card-image
+              class="album-cover"
+              src="{{ album.images[1].url }}"
+              alt="album art"
           /></a>
           <strong>Release Date: </strong>{{ convertDate(album.release_date) }}
           <br />
-          <strong>Tracks: </strong>{{ album.total_tracks }}<br /><br />
-          <mat-card-content [style.min-height]="'80px'">
-            <mat-chip-list aria-label="Artist selection" >
+          <strong>Tracks: </strong>{{ album.total_tracks }}<br />
+          <mat-card-content [style.min-height]="'77px'" [style.margin-top]="'8px'">
+            <mat-chip-list aria-label="Artist selection">
               <a *ngFor="let artist of album.artists" href="artist">
                 <mat-chip>{{ artist.name }}</mat-chip>
               </a>
