--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -1,1 +1,39 @@
-<p>artist-discography works!</p>
+<span *ngIf="albums && artist && artist.images && util">
+  <h1>{{ artist.name }}</h1>
+  <p>Full Discography for {{ artist.name }}</p>
+  <p>Click the <strong>album </strong> cover for more information.</p>
+  <mat-card
+    [style.background]="
+      'url(' + artist.images[0].url + ') no-repeat center center'
+    "
+    [style.background-size]="'cover'"
+    [style.height]="'450px'"
+  >
+  </mat-card>
+  <br /><br />
+  <div fxLayout="row wrap" fxLayout.xs="column">
+    <!-- Single "Responsive" Card-->
+    <div fxFlex [style.margin]="'20px'" *ngFor="let album of albums">
+      <mat-card [style.min-width]="'200px'" [style.padding-bottom]="'5px'">
+        <mat-card-header [style.min-height]="'80px'">
+          <mat-card-title style="font-size: 1.35em" class="text-wrapper">{{
+            util.cropTitle(album.name, 45)
+          }}</mat-card-title>
+          <mat-card-subtitle>New Release</mat-card-subtitle>
+        </mat-card-header>
+        <a href="album"
+          ><img
+            mat-card-image
+            class="album-cover"
+            src="{{ album.images[1].url }}"
+            alt="album art"
+        /></a>
+        <strong>Release Date: </strong>{{ util.convertDate(album.release_date) }}
+        <br />
+        <strong>Tracks: </strong>{{ album.total_tracks }}<br />
+        <br />
+      </mat-card>
+    </div>
+    <!-- -->
+  </div>
+</span>
