--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,8 +46,8 @@
           </mat-form-field>
         </div>
 
-        <a mat-list-item>
-          <mat-icon mat-list-icon> library_music </mat-icon>
+        <a mat-list-item href="/newReleases">
+          <mat-icon mat-list-icon > library_music </mat-icon>
           <p mat-line>New Releases</p>
         </a>
 
