improved album card component to cover both new releases and discography

--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -1,4 +1,8 @@
-<mat-card [style.min-width]="'200px'" [style.padding-bottom]="'5px'" *ngIf="album && album.images && album.artists ">
+<mat-card
+  [style.min-width]="'200px'"
+  [style.padding-bottom]="'5px'"
+  *ngIf="album && album.name && album.images && album.artists"
+>
   <mat-card-header [style.min-height]="'80px'">
     <mat-card-title style="font-size: 1.35em" class="text-wrapper">{{
       util.cropTitle(album.name, 45)
@@ -15,14 +19,12 @@
   <strong>Release Date: </strong>{{ util.convertDate(album.release_date) }}
   <br />
   <strong>Tracks: </strong>{{ album.total_tracks }}<br />
-  <mat-card-content
-    [style.min-height]="'77px'"
-    [style.margin-top]="'8px'"
-  >
+  <mat-card-content [style.min-height]="'77px'" [style.margin-top]="'8px'"  *ngIf="displayArtists">
     <mat-chip-list aria-label="Artist selection">
       <a *ngFor="let artist of album.artists" href="artist">
         <mat-chip>{{ artist.name }}</mat-chip>
       </a>
-    </mat-chip-list>
+    </mat-chip-list>    
   </mat-card-content>
+  <br *ngIf="!displayArtists"/>
 </mat-card>
