--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -13,18 +13,22 @@
     ><img
       mat-card-image
       class="album-cover"
-      src="{{ album.images[1].url }}"
+      [src]="album.images[1].url"
       alt="album art"
   /></a>
   <strong>Release Date: </strong>{{ util.convertDate(album.release_date) }}
   <br />
   <strong>Tracks: </strong>{{ album.total_tracks }}<br />
-  <mat-card-content [style.min-height]="'77px'" [style.margin-top]="'8px'"  *ngIf="displayArtists">
+  <mat-card-content
+    [style.min-height]="'77px'"
+    [style.margin-top]="'8px'"
+    *ngIf="displayArtists"
+  >
     <mat-chip-list aria-label="Artist selection">
       <a *ngFor="let artist of album.artists" href="artist">
         <mat-chip>{{ artist.name }}</mat-chip>
       </a>
-    </mat-chip-list>    
+    </mat-chip-list>
   </mat-card-content>
-  <br *ngIf="!displayArtists"/>
+  <br *ngIf="!displayArtists" />
 </mat-card>
