--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,11 @@
-<p>about works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Maickel Siqueira</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>Student at Seneca college.</p>
+    Check other projects at my
+    <a href="https://www.maickel.ca">portfolio</a> and
+    <a href="https://github.com/mksiq">github</a>.
+  </mat-card-content>
+</mat-card>
