start search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content class="sidenav-content">
+    <mat-sidenav-content class="sidenav-content main">
       <!-- Main content -->
       <router-outlet></router-outlet>
       <!-- ------------ -->
