update to work with real data instead of static

--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -1,22 +1,23 @@
 <mat-card
   [style.min-width]="'200px'"
+  [style.max-width]="cardSize"
   [style.padding-bottom]="'5px'"
   *ngIf="album && album.name && album.images && album.artists"
 >
   <mat-card-header [style.min-height]="'80px'">
     <mat-card-title style="font-size: 1.35em" class="text-wrapper">{{
-      util.cropTitle(album.name, 45)
+      utilService.cropTitle(album.name, 45)
     }}</mat-card-title>
     <mat-card-subtitle>New Release</mat-card-subtitle>
   </mat-card-header>
-  <a href="album"
+  <a [href]="'album/' + album.id"
     ><img
       mat-card-image
       class="album-cover"
       [src]="album.images[1].url"
       alt="album art"
   /></a>
-  <strong>Release Date: </strong>{{ util.convertDate(album.release_date) }}
+  <strong>Release Date: </strong>{{ utilService.convertDate(album.release_date) }}
   <br />
   <strong>Tracks: </strong>{{ album.total_tracks }}<br />
   <mat-card-content
@@ -25,7 +26,7 @@
     *ngIf="displayArtists"
   >
     <mat-chip-list aria-label="Artist selection">
-      <a *ngFor="let artist of album.artists" href="artist">
+      <a *ngFor="let artist of album.artists" [href]="'artist/'+ artist.id">
         <mat-chip>{{ artist.name }}</mat-chip>
       </a>
     </mat-chip-list>
