--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -1,4 +1,4 @@
-<span *ngIf="albums && artist && artist.images && util">
+<span *ngIf="albums && artist && artist.images">
   <h1>{{ artist.name }}</h1>
   <p>Full Discography for {{ artist.name }}</p>
   <p>Click the <strong>album </strong> cover for more information.</p>
@@ -8,7 +8,9 @@
     "
     [style.background-size]="'cover'"
     [style.height]="'450px'"
+    class='resize'
   >
+  <span class="cover-name">{{ artist.name }}</span>
   </mat-card>
   <br /><br />
   <div fxLayout="row wrap" fxLayout.xs="column">
