--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -8,9 +8,9 @@
     "
     [style.background-size]="'cover'"
     [style.height]="'450px'"
-    class='resize'
+    class="resize"
   >
-  <span class="cover-name">{{ artist.name }}</span>
+    <span class="cover-name">{{ artist.name }}</span>
   </mat-card>
   <br /><br />
   <div fxLayout="row wrap" fxLayout.xs="column">
