--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -25,9 +25,9 @@
             aria-label="Artist selection"
             *ngFor="let artist of album.artists"
           >
-            <a [href]="'artist/' + artist.id">
-              <mat-chip>{{ artist.name }}</mat-chip>
-            </a>
+            <mat-chip [routerLink]="'/artist/' + artist.id">{{
+              artist.name
+            }}</mat-chip>
           </mat-chip-list>
           <br />
           <div *ngFor="let copyright of album.copyrights">
