--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -9,10 +9,10 @@
 <div class="content">
   <div fxLayout="row wrap" fxLayout.xs="column">
     <!-- single result "card"-->
-    <div fxFlex [style.margin]="'20px'">
+    <div fxFlex [style.margin]="'20px'" *ngFor="let artist of results">
       <mat-card [style.min-width]="'200px'">
         <mat-card-header>
-          <mat-card-title>Some Artist's Name</mat-card-title>
+          <mat-card-title>{{artist.name}}</mat-card-title>
           <mat-card-subtitle>Artist</mat-card-subtitle>
         </mat-card-header>
         <img
