--- a/src/app/album-card/album-card.component.html
+++ b/src/app/album-card/album-card.component.html
@@ -3,12 +3,13 @@
   [style.max-width]="cardSize"
   [style.padding-bottom]="'5px'"
   *ngIf="album && album.name && album.images && album.artists"
->
+ class="content">
   <mat-card-header [style.min-height]="'80px'">
-    <mat-card-title style="font-size: 1.35em" class="text-wrapper">{{
+    <mat-card-title style="font-size: 1.35em" >{{
       utilService.cropTitle(album.name, 45)
     }}</mat-card-title>
-    <mat-card-subtitle>New Release</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="displayArtists">New Release</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="!displayArtists">Album</mat-card-subtitle>
   </mat-card-header>
   <a [routerLink]="'/album/' + album.id"
     ><img
@@ -26,9 +27,9 @@
     [style.margin-top]="'8px'"
     *ngIf="displayArtists"
   >
-    <mat-chip-list aria-label="Artist selection">
+    <mat-chip-list aria-label="Artist selection"    >
       <span *ngFor="let artist of album.artists">
-          <mat-chip [routerLink]="'/artist/' + artist.id">{{ artist.name }}</mat-chip>
+          <mat-chip [routerLink]="'/artist/' + artist.id" class="artist-pill">{{ artist.name }}</mat-chip>
       </span>
     </mat-chip-list>
   </mat-card-content>
