--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,17 +28,18 @@
     </mat-menu>
   </mat-toolbar>
 
-  <mat-sidenav-container>
+  <mat-sidenav-container >
     <!-- Side nav -->
-    <mat-sidenav
+    <mat-sidenav class="nav"
       #snav
       [opened]="false"
       [mode]="'side'"
       [fixedInViewport]="true"
       fixedTopGap="56"
+      
     >
       <mat-nav-list>
-        <div>
+        <div >
           <form #f="ngForm" (ngSubmit)="handleSearch(f)" >
             <mat-form-field appearance="fill">
               <mat-label>Artist</mat-label>
@@ -57,9 +58,9 @@
           <p mat-line>New Releases</p>
         </a>
 
-        <a mat-list-item>
+        <a mat-list-item routerLink="/favourites">
           <mat-icon mat-list-icon> favorite </mat-icon>
-          <p mat-line>Favorites</p>
+          <p mat-line >Favorites</p>
         </a>
 
         <mat-divider></mat-divider>
