improvents on search by artist component

--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,37 +1,56 @@
-<h1>Favourites</h1>
-<p>
-  The following is a list of your favourite songs from various artists.<br />
-  Click the &nbsp;<mat-icon mat-list-icon>queue_music</mat-icon>&nbsp; icon to
-  <strong>remove</strong> a song from your list
-</p>
+<div *ngIf="favourites">
+  <h1>Favourites</h1>
+  <p>
+    The following is a list of your favourite songs from various artists.<br />
+    Click the &nbsp;<mat-icon mat-list-icon>remove_from_queue</mat-icon>&nbsp;
+    icon to <strong>remove</strong> a song from your list
+  </p>
 
-<br />
+  <br />
 
-<mat-list>
-  <!-- single "favourite" card -->
-  <div *ngFor="let track of favourites">
-    <mat-list-item>
-      <mat-icon mat-list-icon>queue_music</mat-icon>
-      <div mat-line>
-        <mat-card>
-          <mat-card-content
-            ><strong>Track Name</strong> - Track Duration<br /><br />
-            Artist(s):
-            <span><a routerLink="/artist">Artist 1</a>&nbsp;&nbsp;</span>
-            <span
-              ><a routerLink="/artist">Possible Artist 2</a>&nbsp;&nbsp;</span
-            >
+  <mat-list>
+    <!-- single "favourite" card -->
+    <div *ngFor="let track of favourites">
+      <mat-list-item>
+        <mat-icon mat-list-icon (click)="handleRemoveClick(track.id)"
+          >remove_from_queue</mat-icon
+        >
+        <div mat-line>
+          <mat-card>
+            <mat-card-content
+              ><strong>{{ track.name }}</strong> -
+              {{ (track.duration_ms / 60000).toFixed(2) }}<br /><br />
+              Artist(s):
+              <span
+                aria-label="Artist selection"
+                *ngFor="let artist of track.artists"
+                ><a [routerLink]="'/artist/' + artist.id">{{ artist.name }}</a
+                >&nbsp;&nbsp;</span
+              >
 
-            <br />
+              <br />
 
-            Album: <a routerLink="/album"> Album Name</a><br />
-            <div *ngIf="track.preview_url">
-              <br /><audio controls [src]="track.preview_url"></audio>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </mat-list-item>
-  </div>
-  <!-- -->
-</mat-list>
+              Album:
+              <a [routerLink]="'/album/' + track.album.id">
+                {{ track.album.name }}</a
+              ><br />
+              <div *ngIf="track.preview_url">
+                <br /><audio controls [src]="track.preview_url"></audio>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </mat-list-item>
+    </div>
+    <!-- -->
+  </mat-list>
+</div>
+<div *ngIf="!favourites">
+  <h1>Favourites</h1>
+  <p>
+    You don't have any music in favourites. Click on &nbsp;<mat-icon
+      mat-list-icon
+      >queue_music</mat-icon
+    >&nbsp; icon to <strong>add</strong> a song in an album to add your list.
+  </p>
+</div>
