--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,4 +1,5 @@
 <h1>Results for: &ldquo;{{searchQuery}}&rdquo;</h1>
+<div *ngIf="results.length > 0">
 <p>
   The following is a list of artists matching the query.<br />
   Click the <strong>artist image</strong> for more information.
@@ -23,6 +24,7 @@
           [style.object-fit]="'cover'"
           [style.max-height]="'250px'"
           [style.min-height]="'250px'"
+
         />       
         <mat-card-content>
           <strong>Followers: </strong>{{artist.followers.total.toLocaleString() }}<br />
@@ -32,4 +34,8 @@
     </div>
     <!-- -->
   </div>
+</div>
+</div>
+<div *ngIf="results.length == 0">
+  <p>Sorry. We didn't find any albums with your filter.</p>
 </div>
