--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,1 +1,21 @@
-<p>artist-card works!</p>
+<mat-card [style.min-width]="'200px'" class="content">
+  <mat-card-header [style.min-height]="'60px'">
+    <mat-card-title>{{ artist.name }}</mat-card-title>
+  </mat-card-header>
+  <img
+    *ngIf="artist.images[0].url"
+    [routerLink]="'/artist/' + artist.id"
+    mat-card-image
+    class="album-cover"
+    [src]="artist.images[1].url"
+    alt="artist art"
+    [style.object-fit]="'cover'"
+    [style.max-height]="'250px'"
+    [style.min-height]="'250px'"
+  />
+  <mat-card-content>
+    <strong>Followers: </strong>{{ artist.followers.total.toLocaleString()
+    }}<br />
+    <strong>Popularity: </strong>{{ artist.popularity }}
+  </mat-card-content>
+</mat-card>
