litte tweaks on design. added empty environment file

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="content">
   <mat-card-header>
     <mat-card-title>Maickel Siqueira</mat-card-title>
   </mat-card-header>
