--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,9 +1,9 @@
-<span class="container" *ngIf="album && album.images">
+<span class="container"  *ngIf="album && album.images">
   <h1>
     {{ album.name }}
   </h1>
   <p>Full track listing for {{ album.name }}</p>
-  <mat-card>
+  <mat-card class="content">
     <mat-card-header></mat-card-header>
     <mat-card-content fxLayout="row wrap" fxLayout.xs="column">
       <div fxflex>
@@ -25,7 +25,7 @@
             aria-label="Artist selection"
             *ngFor="let artist of album.artists"
           >
-            <mat-chip [routerLink]="'/artist/' + artist.id">{{
+            <mat-chip [routerLink]="'/artist/' + artist.id" class="artist-pill">{{
               artist.name
             }}</mat-chip>
           </mat-chip-list>
@@ -46,20 +46,21 @@
   <mat-list *ngIf="album && album.tracks">
     <mat-list-item
       *ngFor="let track of album.tracks.items"
-      style="margin-bottom: 3px"
+      style="margin-bottom: 5px"
     >
       <mat-icon mat-list-icon (click)="addToFavorites(track.id)"
         >queue_music</mat-icon
       >
-      <div mat-line>
-        <mat-card>
+      <div mat-line> 
+        <mat-card class="reverse">
           <mat-card-content>
             {{ track.track_number }}: {{ track.name }} -
             {{ (track.duration_ms / 60000).toFixed(2) }}
+            <span *ngIf="track.preview_url">
+              <br /><audio controls [src]="track.preview_url"></audio>
+            </span>
           </mat-card-content>
-          <div *ngIf="track.preview_url">
-            <br /><audio controls [src]="track.preview_url"></audio>
-          </div>
+
         </mat-card>
       </div>
     </mat-list-item>
