many small css improvents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,7 +63,7 @@
 
         <a mat-list-item routerLink="/favourites">
           <mat-icon mat-list-icon> favorite </mat-icon>
-          <p mat-line>Favorites</p>
+          <p mat-line>Favourites</p>
         </a>
 
         <mat-divider></mat-divider>
