--- a/src/app/new-releases/new-releases.component.html
+++ b/src/app/new-releases/new-releases.component.html
@@ -1,8 +1,7 @@
 <h1>New Releases</h1>
 <p>The following is a list of new releases.</p>
 <p>
-  Click the <strong>album</strong> cover or <strong>artist</strong> name to
-  filter it.
+  Click the <strong>album</strong> cover or <strong>artist</strong> name for more information.
 </p>
 <div class="content">
   <div fxLayout="row wrap" fxLayout.xs="column">
