--- a/src/app/artist-discography/artist-discography.component.css
+++ b/src/app/artist-discography/artist-discography.component.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   margin-left: 20px;
-  font-size: larger;
-  text-shadow: 2px 2px #333;
+  font-size: 3em;
+  text-shadow: 2px 2px #2e294e;
   padding-bottom: 20px;
 }
