--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <a class="navbar-brand" matTooltip="Home" routerLink="/">
-      <h1>Seneca Music</h1>
+      <h1>Tune Chooser</h1>
     </a>
 
     <span class="navbar-spacer"></span>
