--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -20,3 +20,8 @@
     </div>
   </div>
 </span>
+<div *ngIf="!artist">
+  <h1>Invalid Artist</h1>
+  <br/>
+  <p>Sorry. We can't find any albums with the provided id.</p>
+</div>
