--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -73,3 +73,8 @@
     </mat-list-item>
   </mat-list>
 </span>
+<div *ngIf="!album">
+  <h1>Invalid id</h1>
+  <br/>
+  <p>Sorry. We can't find any albums with the provided id.</p>
+</div>
